# samplotlib

./: .gitignore  README.md  baseplot.py  circusboy.py  colors.py  graylady.py  samplot.py  setup.cfg  setup.py  test.py  utils.py
samplotlib/: baseplot.py  circusboy.py  graylady.py
test/: test.fdb_latexmk  test.fls  test.tex  test.xdv
