[metadata]
name = samplotlib
version = 0.0.2
author = Sam Passaglia
description = Plotting scripts extending matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/passaglia/samplotlib
project_urls =
    Bug Tracker = https://github.com/passaglia/samplotlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = samplotlib
packages = find:
python_requires = >=3.6
install_requires = 
    matplotlib
    numpy

include_package_data = True

[options.packages.find]
where = src

